<resources>
    <string name="app_name">MyFastCampusStudy_Android</string>

    <!-- BMI 계산기 -->
    <string name="text_bmi_calculation_title">BMI 계산기</string>
    <string name="text_height">신장</string>
    <string name="text_weight">체중</string>
    <string name="text_success_btn">확인하기</string>
    <string name="text_hint_of_input_height">신장을 입력해주세요.</string>
    <string name="text_hint_of_input_weight">체중을 입력해주세요.</string>
    <string name="text_bmi_level_0">저체중</string>
    <string name="text_bmi_level_1">정상체중</string>
    <string name="text_bmi_level_2">과체중</string>
    <string name="text_bmi_level_3">경도 비만</string>
    <string name="text_bmi_level_4">중경도 비만</string>
    <string name="text_bmi_level_5">고도 비만</string>

    <!-- 로또 번호 추천 -->
    <string name="text_lottery_number_recommendation">로또번호 추첨기</string>
    <string name="text_add_number">번호 추가하기</string>
    <string name="text_clear_numbers">초기화</string>
    <string name="text_create_random_numbers">자동 생성 시작</string>

    <!-- 비밀 다이어리 -->
    <string name="text_secret_diary_title">비밀 다이어리</string>
    <string name="text_secret_diary_logo">The Secret Garden</string>

    <!-- 계산기 -->
    <string name="text_calculator_title">계산기</string>

    <!-- 전자액자 -->
    <string name="text_picture_frame_title">전자액자</string>
    <string name="text_picture_frame_add_photo">사진 추가하기</string>
    <string name="text_picture_frame_execute">전자액자 실행하기</string>

    <!-- 뽀모도로 타이머 -->
    <string name="text_pomodoro_text">뽀모도로 타이머</string>
    <string name="text_recorder_title">녹음기</string>

    <!-- Facebook Login -->
    <string name="facebook_app_id">494759861908535</string>
    <string name="fb_login_protocol_scheme">fb494759861908535</string>

    <!-- Home Activity -->
    <string name="text_project_level_basic">BASIC</string>
    <string name="text_project_level_intermediate">INTERMEDIATE</string>
    <string name="text_project_level_upper_intermediate">UPPER INTERMEDIATE</string>
    <string name="text_home">홈</string>
    <string name="simple_web_browser">심플 웹 브라우저</string>


</resources>